--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@babylonjs/core": "^7.21.0",
     "@babylonjs/gui": "^7.21.0",
     "@babylonjs/loaders": "^7.21.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "react": "^18.3.1",
