--- a/client/package.json
+++ b/client/package.json
@@ -5,35 +5,35 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "biome check .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@babylonjs/core": "^7.21.0",
-    "@babylonjs/gui": "^7.21.0",
-    "@babylonjs/loaders": "^7.21.0",
+    "@babylonjs/core": "^7.22.5",
+    "@babylonjs/gui": "^7.22.5",
+    "@babylonjs/loaders": "^7.22.5",
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "@headlessui/react": "^2.1.2",
+    "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
+    "@tanstack/react-query": "5.45.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "viem": "latest",
+    "wagmi": "latest"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
+    "@biomejs/biome": "^1.8.0",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@wagmi/cli": "latest",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
+    "buffer": "^6.0.3",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
   }
 }
