--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.5",
     "@babylonjs/core": "^7.22.5",
     "@babylonjs/gui": "^7.22.5",
     "@babylonjs/loaders": "^7.22.5",
@@ -17,6 +18,8 @@
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
     "@tanstack/react-query": "5.45.1",
+    "graphql": "^16.9.0",
+    "ra-data-graphql": "^5.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
