--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.1.5",
     "@tanstack/react-query": "5.45.1",
     "graphql": "^16.9.0",
+    "kubo-rpc-client": "^4.1.1",
     "ra-data-graphql": "^5.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
