--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
     "@tanstack/react-query": "5.45.1",
+    "ethers": "^6.13.2",
     "graphql": "^16.9.0",
     "kubo-rpc-client": "^4.1.1",
     "ra-data-graphql": "^5.1.3",
